--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -30,7 +30,7 @@
         <a class="nav-link" href="./tktGener.html">生成器</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">关于</a>
+        <a class="nav-link" href="./tktAbout.html">关于</a>
       </li>
     </ul>
   </nav>
@@ -46,8 +46,8 @@
   <div class="container">
     <h2>运转大数据</h2>
     <h4 class="text-muted" lang="en">Yùnzhuǎn Dà-shùjù (Big Data for Train Travel in China, YZDSJ)</h4>
-    <p><span>一个小小的个人网页，正在建设中……如有疑问，请联系管理员（前往<a href="tktAbout.html#plq">评论区</a>）。</span><br>
-    <span class="text-muted" lang="en">A brunch of personal web pages, under construction... Any question please contact Kina or just <a href="tktAbout.html#plq">comment</a> us.</span></p>
+    <p><span>一个小小的个人网页，正在建设中……如有疑问，请联系管理员（前往<a href="./tktAbout.html#plq">评论区</a>）。</span><br>
+    <span class="text-muted" lang="en">A brunch of personal web pages, under construction... Any question please contact Kina or just <a href="./tktAbout.html#plq">comment</a> us.</span></p>
     <br/>
     <article class="container">
       <h3>版本迭代史</h3>
@@ -56,6 +56,13 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-09-23(v3.0.7)
+          <ul>
+            <li>新增车站：<var>大板</var>、<var>定州东</var>、<var>赣榆</var>、<var>林东</var>、<var>戚墅堰</var>、<var>日照</var>、<var>日照西</var>、<var>桑根达来</var>、<var>通辽</var>、<var>宣化</var>、<var>宣化北</var></li>
+            <li>为最近两次更新添加的新车站添加标志。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-09-14(v3.0.6)
           <ul>
             <li>新增车站：<var>汉川</var></li>
