--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -27,10 +27,10 @@
         <a class="nav-link" href="./tktmach_latest.html">返る</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./tktGener.html">生成器</a>
+        <a class="nav-link" href="./tktGener.html">ジェネレータ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">关于</a>
+        <a class="nav-link" href="./tktAbout.html">アバウト</a>
       </li>
     </ul>
   </nav>
@@ -47,18 +47,24 @@
     <h2>運転マスデータ</h2>
     <h4 class="text-muted" lang="en">Yùnzhuǎn Dà-shùjù (Big Data for Train Travel in China, YZDSJ)</h4>
     <p>
-    <span class="text-muted" lang="en">A brunch of personal web pages, under construction... Any question please contact Kina or just <a href="tktAbout.html#plq">comment</a> us.</span></p>
+    <span class="text-muted" lang="en">A brunch of personal web pages, under construction... Any question please contact Kina or just <a href="./tktAbout.html#plq">comment</a> us.</span></p>
     <br/>
     <article class="container">
       <h3>変更履歴</h3>
       <h4 class="text-muted" lang="en">Update log</h4>
       <p>これは完全な変更履歴です。内容增加、版式微调等常规更新将不再被列出，敬请注意。</p>
-      <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-09-23(v3.0.7)
+          <ul>
+            <li>新しい駅：<var>大板</var>、<var>定州東</var>、<var>贛榆</var>、<var>林東</var>、<var>戚墅堰</var>、<var>日照</var>、<var>日照西</var>、<var>桑根达来</var>、<var>通遼</var>、<var>宣化</var>、<var>宣化北</var></li>
+            <li>最近の二回の更新以来作った「新しい駅」にマークを付けています。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-09-14(v3.0.6)
           <ul>
-            <li>新しい駅：<var>汉川</var></li>
+            <li>新しい駅：<var>漢川</var></li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -76,7 +82,7 @@
         <li class="list-group-item">
           2021-08-21(v3.0.3)
           <ul>
-            <li>ご注意：各ファイルの名前を更新していた。</li>
+            <li>ご注意：各ファイルの名前を更新していた。ファイル名前は <code>2021a</code> にする</li>
             <li>新しい駅：<var>白城</var></li>
           </ul>
         </li>
@@ -84,7 +90,7 @@
           2021-08-14(v3.0.2)
           <ul>
             <li>文案を翻訳易いになる為に調整</li>
-            <li>新しい駅：<var>承徳</var>、<var>青州市</var>、<var>商丘南</var>、<var>纸坊东</var></li>
+            <li>新しい駅：<var>承徳</var>、<var>青州市</var>、<var>商丘南</var>、<var>纸坊東</var></li>
             <li>新しい駅組：<var>峰福線(線路)</var></li>
           </ul>
         </li>
@@ -102,7 +108,7 @@
             <li>新版、正式的に発表</li>
             <li>新しい日本語翻訳</li>
             <li>文案を翻訳易いになる為に調整</li>
-            <li>新しい駅：<var>安康</var>、<var>白河東</var>、<var>白河県</var>、<var>博克図</var>、<var>承徳南</var>、<var>谷城</var>、<var>満帰</var>、<var>十堰東</var>、<var>図里河</var>、<var>烏尔旗汗</var>、<var>武当山西</var>、<var>香坊</var>、<var>襄州</var>、<var>牙克石</var>、<var>伊図里河</var></li>
+            <li>新しい駅：<var>安康</var>、<var>白河東</var>、<var>白河県</var>、<var>博克図</var>、<var>承徳南</var>、<var>谷城</var>、<var>満帰</var>、<var>十堰東</var>、<var>図里河</var>、<var>烏爾旗汗</var>、<var>武当山西</var>、<var>香坊</var>、<var>襄州</var>、<var>牙克石</var>、<var>伊図里河</var></li>
             <li>記録した駅は537個、機器は1364個。</li>
           </ul>
         </li>
@@ -143,7 +149,7 @@
         <li class="list-group-item">
           2021-06-20(v2.3.13)(2021-06-24 に発表)
           <ul>
-            <li>毕业季，更新频率略有下调。</li>
+            <li>「卒業季」ですから、更新頻度はやや下がった。</li>
             <li>修改了部分标签的格式。</li>
             <li>提前维护了台州西站的更名。</li>
             <li>新しい駅：<var>九台</var>、<var>临沂</var>、<var>莆田</var>、<var>中山北</var></li>
@@ -152,14 +158,14 @@
         <li class="list-group-item">
           2021-06-13(v2.3.12)
           <ul>
-            <li>毕业季，更新频率略有下调。</li>
+            <li>「卒業季」ですから、更新頻度はやや下がった。</li>
             <li>新しい駅：<var>扶余</var>、<var>公主岭</var>、<var>平房</var></li>
           </ul>
         </li>
         <li class="list-group-item">
           2021-06-06(v2.3.11)
           <ul>
-            <li>毕业季，更新频率略有下调。</li>
+            <li>「卒業季」ですから、更新頻度はやや下がった。</li>
             <li>新しい駅：<var>花山南</var>、<var>黄冈</var>、<var>咸宁</var></li>
             <li>新的车票类型。</li>
           </ul>
@@ -167,14 +173,14 @@
         <li class="list-group-item">
           2021-05-27(v2.3.10)
           <ul>
-            <li>新しい駅：<var>贺胜桥東</var></li>
+            <li>新しい駅：<var>贺胜橋東</var></li>
             <li>车站总数达到500个。</li>
           </ul>
         </li>
         <li class="list-group-item">
           2021-05-20(v2.3.9)
           <ul>
-            <li>毕业季，更新频率略有下调。</li>
+            <li>「卒業季」ですから、更新頻度はやや下がった。</li>
             <li>新しい駅：<var>霸州</var>、<var>濱海港</var>、<var>昌平</var>、<var>長春</var>、<var>長春西</var>、<var>常州</var>、<var>徳惠</var>、<var>徳州</var>、<var>阜宁</var>、<var>阜宁南</var>、<var>海安</var>、<var>蓟州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>馬鞍山</var>、<var>蓬莱市</var>、<var>如東</var>、<var>射阳</var>、<var>四平</var>、<var>四平東</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var></li>
             <li>车站总数达到499个，机器数量1263台。</li>
           </ul>
@@ -196,7 +202,7 @@
           2021-04-26(v2.3.6)
           <ul>
             <li>新しい駅：<var>大冶北</var>、<var>華山北</var></li>
-            <li>新しい駅組：<var>宝成、成渝線(線路)</var>、<var>昌福線(線路)</var>、<var>成渝高速線(線路)</var>、<var>抚顺線(線路)</var>、<var>广九線(線路)</var>、<var>广深港高速線(線路)</var>、<var>杭深線(線路)</var>、<var>辽宁沈阳(城市)</var>、<var>沈丹客专線(線路)</var></li>
+            <li>新しい駅組：<var>宝成、成渝線(線路)</var>、<var>昌福線(線路)</var>、<var>成渝高速線(線路)</var>、<var>抚顺線(線路)</var>、<var>广九線(線路)</var>、<var>广深港高速線(線路)</var>、<var>杭深線(線路)</var>、<var>遼宁沈阳(城市)</var>、<var>沈丹客専線(線路)</var></li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -225,7 +231,7 @@
           2021-04-05(v2.3.3)
           <ul>
             <li>
-              新しい駅：<var>八达岭長城</var>、<var>海拉尔</var>
+              新しい駅：<var>八达岭長城</var>、<var>海拉爾</var>
             </li>
           </ul>
         </li>
@@ -236,7 +242,7 @@
               新しい駅：<var>吉首</var>、<var>昆山</var>、<var>良乡</var>、<var>麻城</var>、<var>麻城北</var>、<var>沙城</var>、<var>孝感東</var>、<var>延庆</var>
             </li>
             <li>
-              新しい駅組：<var>京津城际線(線路)</var>
+              新しい駅組：<var>京津城際線(線路)</var>
             </li>
             <li>
               票机功能信息进行少许调整：可能不支持的功能被忽略
@@ -247,28 +253,28 @@
           2021-03-22(v2.3.1)
           <ul>
             <li>
-              新しい駅：<var>昌平北</var>、<var>大理</var>、<var>峨眉</var>、<var>峨眉山</var>、<var>淮安東</var>、<var>康庄</var>、<var>连云港東</var>、<var>密云北</var>、<var>石门县北</var>、<var>顺义西</var>、<var>燕岗</var>
+              新しい駅：昌平北、大理、峨眉、峨眉山、淮安東、康庄、連云港東、密云北、石门県北、顺义西、燕岗
             </li>
             <li>
-              修复：鄭焦城际显示错误
+              修正：鄭焦城際の表示の不具合
             </li>
           </ul>
         </li>
         <li class="list-group-item">
           2021-03-15(v2.3.0pre OR v2.2.3)
           <ul>
-            <li>新しい駅：<var>孝感</var></li>
+            <li>新しい駅：孝感</li>
             <li>移除了过时的车站联合体。</li>
-            <li>试运行：票机功能信息。以<var>北京西</var>、<var>上海</var>站某些票机为例。</li>
+            <li>试運転：票机功能信息。以北京西、上海站某些票机为例。</li>
           </ul>
         </li>
         <li class="list-group-item">
           2021-03-08(v2.2.2) 婦女節快乐！
           <ul>
             <li lang="en">Happy Women's Day!</li>
-            <li>新しい駅：成都西、福利区、哈尔濱西、漢中、连云港、渑池南、彭山北、郫县西、深圳機場、雅安</li>
+            <li>新しい駅：成都西、福利区、哈爾濱西、漢中、連云港、渑池南、彭山北、郫県西、深圳機場、雅安</li>
             <li>駅組案内を作成。新規作成した駅組は：福平線(線路)、甘肃兰州(城市)、京張高速線(線路)</li>
-            <li>优化代码，减少了冗余数据。</li>
+            <li>コードを最適化、不要なデータを減らした。</li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -278,7 +284,8 @@
         <li class="list-group-item">
           2021-02-18(v2.2.0pre OR v2.1.3):
           <ul>
-            <li>新しい駅：北京朝阳、長治東、丹阳、晋城、晋城東、汤逊湖、銅陵、西華、鄢陵。歴史記録を維持する為に新しい駅記録を作成：清華园</li>
+            <li>新しい駅：北京朝阳、長治東、丹阳、晋城、晋城東、汤逊湖、銅陵、西華、鄢陵。</li>
+            <li>歴史記録を維持する為に新しい駅記録を作成：清華园</li>
             <li>駅組案内を作成。新規作成した駅組は：北京(城市)、北京(其他車站)、重庆(城市)、福建福州(城市)、河南鄭州(城市)、河南鄭州(同城站)、湖北武漢(城市)、湖北武漢(同城站)、上海(城市)。</li>
             <li>駅リストを再排、辞書序に排列。</li>
             <li>「千機収録」、2021-02-14 に達成！</li>
@@ -296,8 +303,8 @@
         <li class="list-group-item">
           2021-02-01(v2.1.2):
           <ul>
-            <li>新しい駅：三间房、乌伊岭、伊春、佳木斯、南岔、友好、周家、哈尔濱、哈尔濱東、奎屯、日喀则、朗乡、朱砂古镇、梧州、汤池、浩良河、深圳西、绥化、美溪、西安南、西林、長楽、香兰、斉斉哈尔、斉斉哈尔南</li>
-            <li>新しい駅資料と駅歴史欄。</li>
+            <li>新しい駅：三间房、乌伊岭、伊春、佳木斯、南岔、友好、周家、哈爾濱、哈爾濱東、奎屯、日喀则、朗乡、朱砂古镇、梧州、汤池、浩良河、深圳西、绥化、美溪、西安南、西林、長楽、香兰、斉斉哈爾、斉斉哈爾南</li>
+            <li>新しい「駅資料」と「駅歴史」欄。</li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -324,7 +331,6 @@
             <li>引入“红改蓝”、“票机号码与终端号不符”标签。</li>
             <li>版式调整，浏览器互动优化。条目版成为默认项。</li>
             <li>车站基础信息聚合显示。加入少量拼音数据。</li>
-            <li lang="en">Pinyin information for non Mandarin users. Use this site with extra care and DO NOT rely on it when planning a travel and / or traveling.</li>
             <li>中国語<ruby>拼音<rp>(</rp><rt>ピンイン</rt><rp>)</rp></ruby>情報、ご利用くださいませ。掲載した情報（間違い等）によって引き起こされた（直接的、間接的を問わず）損害に付いて、一切責任を負いません。</li>
           </ul>
         </li>
@@ -332,14 +338,14 @@
           2020-12-12(v2.0.rc1):
           <ul>
             <li>新介绍页面，更新Mdict版。</li>
-            <li>引入“票号标注”标签。</li>
+            <li>「票号标注」タグを作成。</li>
           </ul>
         </li>
         <li class="list-group-item">
           2020-12-02: 新介绍页面，清河站探访，缩小网页体积。
         </li>
         <li class="list-group-item">
-          2020-05-10: 首个公开的版本。
+          2020-05-10: 初公開のリリース。
         </li>
       </ul>
     </div>
