--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -111,6 +111,13 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-09-23(v3.0.7)
+          <ul>
+            <li>新增车站：<var>大板</var>、<var>定州东</var>、<var>赣榆</var>、<var>林东</var>、<var>戚墅堰</var>、<var>日照</var>、<var>日照西</var>、<var>桑根达来</var>、<var>通辽</var>、<var>宣化</var>、<var>宣化北</var></li>
+            <li>为最近两次更新添加的新车站添加标志。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-09-14(v3.0.6)
           <ul>
             <li>新增车站：<var>汉川</var></li>
@@ -121,10 +128,10 @@
           <ul>
             <li>更改版本为<code>2021b</code></li>
           </ul>
-          ……
         </li>
         </li>
         <li class="list-group-item">
+          ……
           2021-07-31(v3.0.0)
           <ul>
             <li>新版本正式发布</li>
@@ -135,35 +142,7 @@
           </ul>
         </li>
         <li class="list-group-item">
-          2021-07-22(v3.0.0-beta.1)
-          <ul>
-            <li>车补票查询页试用</li>
-            <li>测试多语言翻译</li>
-            <li>新增车站：<var>阿克苏</var></li>
-            <li>移除临时车站：<var>郑州客运段</var></li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-07-15(v3.0.0-alpha.1)
-          <ul>
-            <li>新增车站：<var>嘉善</var></li>
-            <li>增加对来源的标识。</li>
-            <li>样式更改为本地资源，便于保存。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-07-08(v3.0.0-alpha)
-          <ul>
-            <li>新增车站：<var>大连</var>、<var>合肥北城</var>、<var>林芝</var>、<var>水家湖</var>、<var>台州西</var>、<var>太仓</var>、<var>天祝</var>、<var>武威南</var>、<var>咸阳西</var>、<var>永登</var>，新增虚拟车站：<var>郑州客运段</var></li>
-            <li>新增车站联合体：<var>合福高速线(线路)</var>、<var>金温货线(线路)</var>、<var>金温线(线路)</var></li>
-            <li>勋章展示、车站客货运标志功能上线。</li>
-            <li>车补票试运行。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
           ……
-        </li>
-        <li class="list-group-item">
           2021-03-15(v2.3.0pre OR v2.2.3)
           <ul>
             <li>新增车站：<var>孝感</var></li>
