Reformat index.html page
Signed-off-by: firetimer <adult@live.cn>

--- a/index.html
+++ b/index.html
@@ -42,24 +42,23 @@
           </div>
           <article class="markdown-body">
             <h3>
-              <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.
+              <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my GitHub Pages.
               <!---<a id="catalog" class="anchor" href="catalog.html" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Here is the Catalog.-->
             </h3>
 
             <p>Contents may be written in English, 中文(Chinese), 日本語(Japanese) or sometimes Dansk (Danish).</p>
 
             <blockquote>
-              <p>Tencent QQ: 286_280_2117</p>
-              <p>Chats via <a href="https://keybase.io/firetimer/chat">Keybase</a> is also accepted.</p>
-              <p>Mail: myad#live.cn (REPLACE # WITH @)</p>
+            <p>Chats via <a href="https://keybase.io/firetimer/chat">Keybase</a> is accepted.</p>
+            <p>Mail: myad#live.cn (REPLACE # WITH @)</p>
             </blockquote>
 
-            <p><a href="https://my.flightradar24.com/firetimer">
-              <img src="https://banners-my.flightradar24.com/firetimer.png" alt="My Flightdiary.net profile" />
-            </a></p>
+            <p>
+            <a href="https://my.flightradar24.com/firetimer"><img src="https://banners-my.flightradar24.com/firetimer.png" alt="My Flightdiary.net profile" /></a>
+            </p>
 
             <h3>
-              <a id="available-contents" class="anchor" href="#available-contents" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Available Contents
+            <a id="available-contents" class="anchor" href="#available-contents" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Available Contents
             </h3>
 
             <p xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#" class="license-text">When not declared explicitly, all these documents are licensed under CC BY-NC 4.0<a href="https://creativecommons.org/licenses/by-nc/4.0">
