--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,6 +55,13 @@
       <p>これは完全な変更履歴です。内容增加、版式微调等常规更新将不再被列出，敬请注意。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-09-30(v3.0.8)
+          <ul>
+            <li>新しい駅：<var>冠豸山南</var></li>
+            <li>新しい駅組：<var>浦梅鉄路(線路)</var>、<var>兴泉鉄路(線路)</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-09-23(v3.0.7)
           <ul>
             <li>新しい駅：<var>大板</var>、<var>定州東</var>、<var>贛榆</var>、<var>林東</var>、<var>戚墅堰</var>、<var>日照</var>、<var>日照西</var>、<var>桑根达来</var>、<var>通遼</var>、<var>宣化</var>、<var>宣化北</var></li>
