--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,13 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-09-30(v3.0.8)
+          <ul>
+            <li>新增车站：<var>冠豸山南</var></li>
+            <li>新增车站联合体：<var>浦梅铁路(线路)</var>、<var>兴泉铁路(线路)</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-09-23(v3.0.7)
           <ul>
             <li>新增车站：<var>大板</var>、<var>定州东</var>、<var>赣榆</var>、<var>林东</var>、<var>戚墅堰</var>、<var>日照</var>、<var>日照西</var>、<var>桑根达来</var>、<var>通辽</var>、<var>宣化</var>、<var>宣化北</var></li>
