--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -42,7 +42,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2021a2.mdx"><i class="fas fa-download"></i>下载词典 - 2021年08月30日版本</a></p>
+    <p><a href="./tktMach2021b2.mdx"><i class="fas fa-download"></i>下载词典 - 2021年09月30日版本</a></p>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
   </div>
   <div class="container">
@@ -111,6 +111,13 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-09-30(v3.0.8)
+          <ul>
+            <li>新增车站：<var>冠豸山南</var></li>
+            <li>新增车站联合体：<var>浦梅铁路(线路)</var>、<var>兴泉铁路(线路)</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-09-23(v3.0.7)
           <ul>
             <li>新增车站：<var>大板</var>、<var>定州东</var>、<var>赣榆</var>、<var>林东</var>、<var>戚墅堰</var>、<var>日照</var>、<var>日照西</var>、<var>桑根达来</var>、<var>通辽</var>、<var>宣化</var>、<var>宣化北</var></li>
