--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -52,9 +52,18 @@
     <article class="container">
       <h3>変更履歴</h3>
       <h4 class="text-muted" lang="en">Update log</h4>
-      <p>これは完全な変更履歴です。内容增加、版式微调等常规更新将不再被列出，敬请注意。</p>
+      <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-10-15(v3.1.0)
+          <ul>
+            <li>学業の為、一部のデータは今回の更新で発表されていません。それらは次回の更新で発表されます。</li>
+            <li>イメージは記録ごとに対応できる。</li>
+            <li>自動転写と翻訳を更新。</li>
+            <li>新しい駅：<var>大同南</var>、<var>代県</var>、<var>岱岳</var>、<var>古田</var>、<var>河口北</var>、<var>建水</var>、<var>锦州</var>、<var>涞源</var>、<var>灵丘</var>、<var>牛栏山</var>、<var>朔州</var>、<var>随州</var>、<var>叶柏寿</var>、<var>原平</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-09-30(v3.0.8)
           <ul>
             <li>新しい駅：<var>冠豸山南</var></li>
@@ -97,7 +106,7 @@
           2021-08-14(v3.0.2)
           <ul>
             <li>文案を翻訳易いになる為に調整</li>
-            <li>新しい駅：<var>承徳</var>、<var>青州市</var>、<var>商丘南</var>、<var>纸坊東</var></li>
+            <li>新しい駅：<var>承徳</var>、<var>青州市</var>、<var>商丘南</var>、<var>紙坊東</var></li>
             <li>新しい駅組：<var>峰福線(線路)</var></li>
           </ul>
         </li>
@@ -329,7 +338,7 @@
             <li>现在机位信息可以带图片了。支持sm.ms图床或本地图片。</li>
             <li>版式微调，浏览器互动优化。</li>
             <li>车站更名处理：对部分已更名车站的信息进行整理。</li>
-            <li>重新对票纸类型进行了编码。</li>
+            <li>重新对票紙类型进行了编码。</li>
           </ul>
         </li>
         <li class="list-group-item">
