--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,15 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-10-15(v3.1.0)
+          <ul>
+            <li>由于学业原因，部分数据未在本次更新中发布，它们将在下次更新中发布。</li>
+            <li>现在图片直接与每条记录对应了。</li>
+            <li>新增并修改部分自动转写与翻译。</li>
+            <li>新增车站：<var>大同南</var>、<var>代县</var>、<var>岱岳</var>、<var>古田</var>、<var>河口北</var>、<var>建水</var>、<var>锦州</var>、<var>涞源</var>、<var>灵丘</var>、<var>牛栏山</var>、<var>朔州</var>、<var>随州</var>、<var>叶柏寿</var>、<var>原平</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-09-30(v3.0.8)
           <ul>
             <li>新增车站：<var>冠豸山南</var></li>
