--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,16 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-10-24(v3.1.1) 1024 Programmers' Day!
+          <ul>
+            <li>修改了贡献者的统计方式。</li>
+            <li>调整了红票特辑的统计方式。</li>
+            <li>增加了对事件发生时间的模糊描述。</li>
+            <li>新增并修改自动转写与翻译。</li>
+            <li>新增车站：<var>威海北</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-10-15(v3.1.0)
           <ul>
             <li>由于学业原因，部分数据未在本次更新中发布，它们将在下次更新中发布。</li>
