--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,6 +55,16 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-10-24(v3.1.1) 1024 Programmers' Day!
+          <ul>
+            <li>貢献統計の方法を更新。</li>
+            <li>「红票特辑」統計の方法を更新。</li>
+            <li>事件発生時間の「ぼんやりと説明」機能を実装。</li>
+            <li>自動転写と翻訳を更新。</li>
+            <li>新しい駅：<var>威海北</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-10-15(v3.1.0)
           <ul>
             <li>学業の為、一部のデータは今回の更新で発表されていません。それらは次回の更新で発表されます。</li>
