--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -69,15 +69,15 @@
       <table class="table">
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
         <tr><td>1</td><td>郑州东</td><td>46</td><td>59</td></tr>
-        <tr><td>2</td><td>郑州</td><td>43</td><td>55</td></tr>
-        <tr><td>3</td><td>长春</td><td>43</td><td>45</td></tr>
+        <tr><td>2</td><td>长春</td><td>44</td><td>46</td></tr>
+        <tr><td>3</td><td>郑州</td><td>43</td><td>55</td></tr>
         <tr><td>4</td><td>北京南</td><td>32</td><td>34</td></tr>
         <tr><td>5</td><td>杭州东</td><td>31</td><td>36</td></tr>
-        <tr><td>6</td><td>兰州</td><td>29</td><td>36</td></tr>
+        <tr><td>6</td><td>兰州</td><td>29</td><td>37</td></tr>
         <tr><td>7</td><td>福州</td><td>27</td><td>33</td></tr>
-        <tr><td>8</td><td>兰州西</td><td>25</td><td>31</td></tr>
+        <tr><td>8</td><td>兰州西</td><td>25</td><td>33</td></tr>
         <tr><td>9</td><td>上海</td><td>22</td><td>23</td></tr>
-        <tr><td>10</td><td>天津</td><td>21</td><td>28</td></tr>
+        <tr><td>10</td><td>南京南</td><td>22</td><td>22</td></tr>
       </table>
     </div>
     <div class="container">
@@ -111,6 +111,16 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-10-24(v3.1.1) 1024 Programmers' Day!
+          <ul>
+            <li>修改了贡献者的统计方式。</li>
+            <li>调整了红票特辑的统计方式。</li>
+            <li>增加了对事件发生时间的模糊描述。</li>
+            <li>新增并修改自动转写与翻译。</li>
+            <li>新增车站：<var>威海北</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-10-15(v3.1.0)
           <ul>
             <li>由于学业原因，部分数据未在本次更新中发布，它们将在下次更新中发布。</li>
@@ -131,12 +141,6 @@
           <ul>
             <li>新增车站：<var>大板</var>、<var>定州东</var>、<var>赣榆</var>、<var>林东</var>、<var>戚墅堰</var>、<var>日照</var>、<var>日照西</var>、<var>桑根达来</var>、<var>通辽</var>、<var>宣化</var>、<var>宣化北</var></li>
             <li>为最近两次更新添加的新车站添加标志。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-09-14(v3.0.6)
-          <ul>
-            <li>新增车站：<var>汉川</var></li>
           </ul>
         </li>
         <li class="list-group-item">
