--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,6 +55,11 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-10-31(v3.1.2)
+          <ul>
+            <li>普通の更新です。</li>
+          </ul>
+        </li>
           2021-10-24(v3.1.1) 1024 Programmers' Day!
           <ul>
             <li>貢献統計の方法を更新。</li>
