--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,11 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-10-31(v3.1.2)
+          <ul>
+            <li>常规更新。</li>
+          </ul>
+        </li>
           2021-10-24(v3.1.1) 1024 Programmers' Day!
           <ul>
             <li>修改了贡献者的统计方式。</li>
