--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -69,15 +69,15 @@
       <table class="table">
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
         <tr><td>1</td><td>郑州东</td><td>46</td><td>59</td></tr>
-        <tr><td>2</td><td>长春</td><td>44</td><td>46</td></tr>
+        <tr><td>2</td><td>长春</td><td>46</td><td>49</td></tr>
         <tr><td>3</td><td>郑州</td><td>43</td><td>55</td></tr>
         <tr><td>4</td><td>北京南</td><td>32</td><td>34</td></tr>
         <tr><td>5</td><td>杭州东</td><td>31</td><td>36</td></tr>
         <tr><td>6</td><td>兰州</td><td>29</td><td>37</td></tr>
         <tr><td>7</td><td>福州</td><td>27</td><td>33</td></tr>
         <tr><td>8</td><td>兰州西</td><td>25</td><td>33</td></tr>
-        <tr><td>9</td><td>上海</td><td>22</td><td>23</td></tr>
-        <tr><td>10</td><td>南京南</td><td>22</td><td>22</td></tr>
+        <tr><td>9</td><td>上海</td><td>23</td><td>24</td></tr>
+        <tr><td>10</td><td>天津</td><td>22</td><td>29</td></tr>
       </table>
     </div>
     <div class="container">
@@ -111,6 +111,12 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-10-31(v3.1.2)
+          <ul>
+            <li>常规更新。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-10-24(v3.1.1) 1024 Programmers' Day!
           <ul>
             <li>修改了贡献者的统计方式。</li>
@@ -127,20 +133,6 @@
             <li>现在图片直接与每条记录对应了。</li>
             <li>新增并修改部分自动转写与翻译。</li>
             <li>新增车站：<var>大同南</var>、<var>代县</var>、<var>岱岳</var>、<var>古田</var>、<var>河口北</var>、<var>建水</var>、<var>锦州</var>、<var>涞源</var>、<var>灵丘</var>、<var>牛栏山</var>、<var>朔州</var>、<var>随州</var>、<var>叶柏寿</var>、<var>原平</var></li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-09-30(v3.0.8)
-          <ul>
-            <li>新增车站：<var>冠豸山南</var></li>
-            <li>新增车站联合体：<var>浦梅铁路(线路)</var>、<var>兴泉铁路(线路)</var></li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-09-23(v3.0.7)
-          <ul>
-            <li>新增车站：<var>大板</var>、<var>定州东</var>、<var>赣榆</var>、<var>林东</var>、<var>戚墅堰</var>、<var>日照</var>、<var>日照西</var>、<var>桑根达来</var>、<var>通辽</var>、<var>宣化</var>、<var>宣化北</var></li>
-            <li>为最近两次更新添加的新车站添加标志。</li>
           </ul>
         </li>
         <li class="list-group-item">
