--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,6 +55,14 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-11-14(v3.1.3)
+          <ul>
+            <li>記録チップの初期値生成を調整。</li>
+            <li>デフォルトでは券売機の各記録を逆順で出力します。</li>
+            <li>「生成器」には記録チップの初期値生成をキャンセル。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-10-31(v3.1.2)
           <ul>
             <li>普通の更新です。</li>
