--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,14 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-11-14(v3.1.3)
+          <ul>
+            <li>调整了默认提示语生成流程。</li>
+            <li>默认以倒序列出机器各条记录。</li>
+            <li>取消了填写表格自动生成提示语功能。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-10-31(v3.1.2)
           <ul>
             <li>常规更新。</li>
