--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -68,10 +68,10 @@
       <h3>趋势榜</h3><h4 class="text-muted" lang="en">Trend List</h4>
       <table class="table">
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-        <tr><td>1</td><td>郑州东</td><td>46</td><td>59</td></tr>
-        <tr><td>2</td><td>长春</td><td>46</td><td>49</td></tr>
+        <tr><td>1</td><td>长春</td><td>47</td><td>54</td></tr>
+        <tr><td>2</td><td>郑州东</td><td>46</td><td>59</td></tr>
         <tr><td>3</td><td>郑州</td><td>43</td><td>55</td></tr>
-        <tr><td>4</td><td>北京南</td><td>32</td><td>34</td></tr>
+        <tr><td>4</td><td>北京南</td><td>36</td><td>39</td></tr>
         <tr><td>5</td><td>杭州东</td><td>31</td><td>36</td></tr>
         <tr><td>6</td><td>兰州</td><td>29</td><td>37</td></tr>
         <tr><td>7</td><td>福州</td><td>27</td><td>33</td></tr>
@@ -111,6 +111,14 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-11-14(v3.1.3)
+          <ul>
+            <li>调整了默认提示语生成流程。</li>
+            <li>默认以倒序列出机器各条记录。</li>
+            <li>取消了填写表格自动生成提示语功能。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-10-31(v3.1.2)
           <ul>
             <li>常规更新。</li>
