--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,14 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-11-28(v3.1.4)
+          <ul>
+            <li>新增并修改部分翻译。</li>
+            <li>新增车站：<var>古北口</var>、<var>华山</var>、<var>临平南</var>、<var>渭南北</var>、<var>渭南西</var></li>
+            <li>新增车站联合体：<var>徐兰高速线(线路)</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-11-14(v3.1.3)
           <ul>
             <li>调整了默认提示语生成流程。</li>
