--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,6 +55,14 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-11-28(v3.1.4)
+          <ul>
+            <li>新增并修改部分翻译。</li>
+            <li>新しい駅：<var>古北口</var>、<var>華山</var>、<var>臨平南</var>、<var>渭南北</var>、<var>渭南西</var></li>
+            <li>新しい駅組：<var>徐蘭高速線(線路)</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-11-14(v3.1.3)
           <ul>
             <li>記録チップの初期値生成を調整。</li>
