--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -42,7 +42,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2021b2.mdx"><i class="fas fa-download"></i>下载词典 - 2021年09月30日版本</a></p>
+    <p><a href="./tktMach2021c2.mdx"><i class="fas fa-download"></i>下载词典 - 2021年10月31日版本</a></p>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
   </div>
   <div class="container">
@@ -111,6 +111,14 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-11-28(v3.1.4)
+          <ul>
+            <li>新增并修改部分翻译。</li>
+            <li>新增车站：<var>古北口</var>、<var>华山</var>、<var>临平南</var>、<var>渭南北</var>、<var>渭南西</var></li>
+            <li>新增车站联合体：<var>徐兰高速线(线路)</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-11-14(v3.1.3)
           <ul>
             <li>调整了默认提示语生成流程。</li>
