--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,9 +55,19 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-12-12(v3.1.5)
+          <ul>
+            <li>一部の翻訳を更新。</li>
+            <li>一部の日付表示は簡略化。</li>
+            <li>記録説明には当サイト内リンクを挿入できます。</li>
+            <li>新しい駅：<var>陳江南</var>、<var>惠州</var>、<var>永康</var>、<var>仲愷</var></li>
+            <li>新しい駅組：<var>京滬高速線(線路)</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-11-28(v3.1.4)
           <ul>
-            <li>新增并修改部分翻译。</li>
+            <li>一部の翻訳を更新。</li>
             <li>新しい駅：<var>古北口</var>、<var>華山</var>、<var>臨平南</var>、<var>渭南北</var>、<var>渭南西</var></li>
             <li>新しい駅組：<var>徐蘭高速線(線路)</var></li>
           </ul>
