--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,16 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-12-12(v3.1.5)
+          <ul>
+            <li>新增并修改部分翻译。</li>
+            <li>部分日期显示简化。</li>
+            <li>车票记录说明里可以插入站内链接了。</li>
+            <li>新增车站：<var>陈江南</var>、<var>惠州</var>、<var>永康</var>、<var>仲恺</var></li>
+            <li>新增车站联合体：<var>京沪高速线(线路)</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-11-28(v3.1.4)
           <ul>
             <li>新增并修改部分翻译。</li>
