--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -13,12 +13,10 @@
   <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
   <script src="./js/tkt_type.min.js"></script>
-  <!-- React BEGIN -->
-  <script src="https://cdn.staticfile.org/react/17.0.0/umd/react.production.min.js" crossorigin></script>
-  <script src="https://cdn.staticfile.org/react-dom/17.0.0/umd/react-dom.production.min.js" crossorigin></script>
-  <script src="./js/data_persons.min.js"></script>
-  <!-- React END -->
-  <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
+  <!-- Nim BEGIN -->
+  <link rel="preload" href="./js/aboutPage.min.js" type="text/javascript" as="script">
+  <link rel="preload" href="./js/aboutPageData.min.js" type="text/javascript" as="script">
+  <!-- Nim END -->
   <style>
     body{padding-top:4em;}img.ptimg{width:300px;max-width:100%;height:auto}p.score span.s0lt1,p.score span.s1lt1{color:red!important}p.score span.s1lt2,p.score span.s2lt1,p.score span.s2lt2,p.score span.s3lt1,p.score span.s4lt2{color:#ff0!important}p.score span.s4lt1,p.score span.s5lt1{color:#3f3!important}p.score span.s0lt2,p.score span.s3lt2,p.score span.s5lt2{color:transparent!important}.heimu,.heimu a{background-color:#252525;color:#252525}a.promo{word-break: break-all}
   </style>
@@ -61,8 +59,9 @@
     <p><span>一个小小的个人网页，正在建设中……如有疑问，请联系管理员（前往<a href="#plq">评论区</a>）。</span><br>
     <span class="text-muted" lang="en">A brunch of personal web pages, under construction... Any question please contact Kina or just <a href="#plq">comment</a> us.</span></p>
     <!-- Person info - React -->
+    <script src="./js/aboutPageData.min.js"></script>
     <div class="card" id="react_container_persons"></div>
-    <script src="./js/react_about_person.min.js"></script>
+    <script src="./js/aboutPage.min.js"></script>
     <br/>
     <div class="container">
       <h3>趋势榜</h3><h4 class="text-muted" lang="en">Trend List</h4>
@@ -111,38 +110,17 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
-          2021-11-28(v3.1.4)
+          2021-12-12(v3.1.5)
           <ul>
             <li>新增并修改部分翻译。</li>
-            <li>新增车站：<var>古北口</var>、<var>华山</var>、<var>临平南</var>、<var>渭南北</var>、<var>渭南西</var></li>
-            <li>新增车站联合体：<var>徐兰高速线(线路)</var></li>
+            <li>部分日期显示简化。</li>
+            <li>车票记录说明里可以插入站内链接了。</li>
+            <li>新增车站：<var>陈江南</var>、<var>惠州</var>、<var>永康</var>、<var>仲恺</var></li>
+            <li>新增车站联合体：<var>京沪高速线(线路)</var></li>
           </ul>
         </li>
         <li class="list-group-item">
-          2021-11-14(v3.1.3)
-          <ul>
-            <li>调整了默认提示语生成流程。</li>
-            <li>默认以倒序列出机器各条记录。</li>
-            <li>取消了填写表格自动生成提示语功能。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-10-31(v3.1.2)
-          <ul>
-            <li>常规更新。</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-10-24(v3.1.1) 1024 Programmers' Day!
-          <ul>
-            <li>修改了贡献者的统计方式。</li>
-            <li>调整了红票特辑的统计方式。</li>
-            <li>增加了对事件发生时间的模糊描述。</li>
-            <li>新增并修改自动转写与翻译。</li>
-            <li>新增车站：<var>威海北</var></li>
-          </ul>
-        </li>
-        <li class="list-group-item">
+          ……
           2021-10-15(v3.1.0)
           <ul>
             <li>由于学业原因，部分数据未在本次更新中发布，它们将在下次更新中发布。</li>
@@ -207,11 +185,12 @@
     </div>
   </div>
   <a id="plq"></a>
+  <script src="https://unpkg.com/valine/dist/Valine.min.js"></script>
   <div id="vcomments" class="container"></div>
   <script>
       new Valine({el: '#vcomments',appId: 'VY3q0lDUnkBNoCLciW7W4tCC-gzGzoHsz',appKey: 'RUb9iXuGiAK80y4rc9J2zN65', visitor: true, enableQQ: true, requiredFields: ['nick']})
   </script>
-  <!--shinobi1--><script type="text/javascript" src="//xa.shinobi.jp/ufo/190138801"></script><noscript><a href="//xa.shinobi.jp/bin/gg?190138801" target="_blank"><img src="//xa.shinobi.jp/bin/ll?190138801" border="0"></a><br><span style="font-size:9px"><img style="margin:0;vertical-align:text-bottom;" src="//img.shinobi.jp/tadaima/fj.gif" width="19" height="11"> </span></noscript><!--shinobi2-->
+  <!--shinobi1--><script type="text/javascript" src="https://xa.shinobi.jp/ufo/190138801"></script><noscript><a href="https://xa.shinobi.jp/bin/gg?190138801" target="_blank"><img src="https://xa.shinobi.jp/bin/ll?190138801" border="0"></a><br><span style="font-size:9px"><img style="margin:0;vertical-align:text-bottom;" src="https://img.shinobi.jp/tadaima/fj.gif" width="19" height="11"> </span></noscript><!--shinobi2-->
   <footer class="container">
     <small class="text-muted">文中各商标为对应公司的资产。</small>
   </footer>
