--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,14 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-12-31(v3.1.6)
+          <ul>
+            <li>为避免误解，本次更新中年份不再简写</li>
+            <li>部分车站联合体新增拼音与各语言翻译信息</li>
+            <li>新增车站：<var>洛阳龙门</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-12-12(v3.1.5)
           <ul>
             <li>新增并修改部分翻译。</li>
