--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,6 +55,14 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-12-31(v3.1.6)
+          <ul>
+            <li>誤解されないように、今度は年分の表示は簡略にさせなかったこと</li>
+            <li>一部の駅組には拼音・翻訳・転写等の情報を追加</li>
+            <li>新しい駅：<var>洛阳龍門</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-12-12(v3.1.5)
           <ul>
             <li>一部の翻訳を更新。</li>
