--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -67,14 +67,14 @@
       <h3>趋势榜</h3><h4 class="text-muted" lang="en">Trend List</h4>
       <table class="table">
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-        <tr><td>1</td><td>长春</td><td>47</td><td>54</td></tr>
-        <tr><td>2</td><td>郑州东</td><td>46</td><td>59</td></tr>
+        <tr><td>1</td><td>长春</td><td>49</td><td>57</td></tr>
+        <tr><td>2</td><td>郑州东</td><td>47</td><td>60</td></tr>
         <tr><td>3</td><td>郑州</td><td>43</td><td>55</td></tr>
         <tr><td>4</td><td>北京南</td><td>36</td><td>39</td></tr>
-        <tr><td>5</td><td>杭州东</td><td>31</td><td>36</td></tr>
-        <tr><td>6</td><td>兰州</td><td>29</td><td>37</td></tr>
+        <tr><td>5</td><td>杭州东</td><td>31</td><td>37</td></tr>
+        <tr><td>6</td><td>兰州</td><td>30</td><td>40</td></tr>
         <tr><td>7</td><td>福州</td><td>27</td><td>33</td></tr>
-        <tr><td>8</td><td>兰州西</td><td>25</td><td>33</td></tr>
+        <tr><td>8</td><td>兰州西</td><td>26</td><td>34</td></tr>
         <tr><td>9</td><td>上海</td><td>23</td><td>24</td></tr>
         <tr><td>10</td><td>天津</td><td>22</td><td>29</td></tr>
       </table>
@@ -110,6 +110,14 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2021-12-31(v3.1.6)
+          <ul>
+            <li>为避免误解，本次更新中年份不再简写</li>
+            <li>部分车站联合体新增拼音与各语言翻译信息</li>
+            <li>新增车站：<var>洛阳龙门</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-12-12(v3.1.5)
           <ul>
             <li>新增并修改部分翻译。</li>
