--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,17 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-01-17(v3.2.0)
+          <ul>
+            <li>使用中文车站名作为日文模式下卡片的默认名称</li>
+            <li>为避免误解，年份只在简介中简写</li>
+            <li>因混淆概率较低，年份的日本语翻译中去除“公元”字样</li>
+            <li>部分车站增加技术作业类型表示</li>
+            <li>新增车站：<var>响水县</var>、<var>新沂南</var></li>
+            <li>更改文件名版本号为<code>2022a</code></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-12-31(v3.1.6)
           <ul>
             <li>为避免误解，本次更新中年份不再简写</li>
