--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,10 +55,21 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-01-17(v3.2.0)
+          <ul>
+            <li>日本語頁には中国語の駅名を初期値として使用。</li>
+            <li>誤解を避ける為に、年分は「記録詳細」にのみ簡略に書かれていた。</li>
+            <li>混同の確率が低いので、年分の日本語表示から「公元」の文字を削除。</li>
+            <li>一部の駅で「技術作業類型」表示を追加</li>
+            <li>新しい駅：<var>响水県</var>、<var>新沂南</var></li>
+            <li>ファイル版本番号は <code>2022a</code> にする</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-12-31(v3.1.6)
           <ul>
-            <li>誤解されないように、今度は年分の表示は簡略にさせなかったこと</li>
-            <li>一部の駅組には拼音・翻訳・転写等の情報を追加</li>
+            <li>誤解されないように、今度は年分の表示は簡略にさせなかったこと。</li>
+            <li>一部の駅組には拼音・翻訳・転写等の情報を追加。</li>
             <li>新しい駅：<var>洛阳龍門</var></li>
           </ul>
         </li>
