--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -40,7 +40,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2021c2.mdx"><i class="fas fa-download"></i>下载词典 - 2021年10月31日版本</a></p>
+    <p><a href="./tktMach2021d2.mdx"><i class="fas fa-download"></i>下载词典 - 2021年12月31日版本</a></p>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
   </div>
   <div class="container">
@@ -110,21 +110,22 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-01-17(v3.2.0)
+          <ul>
+            <li>使用中文车站名作为日文模式下卡片的默认名称</li>
+            <li>为避免误解，年份只在简介中简写</li>
+            <li>因混淆概率较低，年份的日本语翻译中去除“公元”字样</li>
+            <li>部分车站增加技术作业类型表示</li>
+            <li>新增车站：<var>响水县</var>、<var>新沂南</var></li>
+            <li>更改文件名版本号为<code>2022a</code></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2021-12-31(v3.1.6)
           <ul>
             <li>为避免误解，本次更新中年份不再简写</li>
             <li>部分车站联合体新增拼音与各语言翻译信息</li>
             <li>新增车站：<var>洛阳龙门</var></li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-12-12(v3.1.5)
-          <ul>
-            <li>新增并修改部分翻译。</li>
-            <li>部分日期显示简化。</li>
-            <li>车票记录说明里可以插入站内链接了。</li>
-            <li>新增车站：<var>陈江南</var>、<var>惠州</var>、<var>永康</var>、<var>仲恺</var></li>
-            <li>新增车站联合体：<var>京沪高速线(线路)</var></li>
           </ul>
         </li>
         <li class="list-group-item">
