--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,14 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-01-30(v3.2.1)
+          <ul>
+            <li>微调部分翻译。</li>
+            <li>新增车站：<var>阜宁东</var>、<var>惠州北</var></li>
+            <li>新增车站联合体：<var>郑阜高速线(线路)</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-01-17(v3.2.0)
           <ul>
             <li>使用中文车站名作为日文模式下卡片的默认名称</li>
