--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,6 +55,14 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-01-30(v3.2.1)
+          <ul>
+            <li>一部の翻訳を微調整。</li>
+            <li>新しい駅：<var>阜寧東</var>、<var>惠州北</var></li>
+            <li>新しい駅組：<var>郑阜高速線(線路)</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-01-17(v3.2.0)
           <ul>
             <li>日本語頁には中国語の駅名を初期値として使用。</li>
@@ -242,7 +250,7 @@
           2021-06-06(v2.3.11)
           <ul>
             <li>「卒業季」ですから、更新頻度はやや下がった。</li>
-            <li>新しい駅：<var>花山南</var>、<var>黄冈</var>、<var>咸宁</var></li>
+            <li>新しい駅：<var>花山南</var>、<var>黄冈</var>、<var>咸寧</var></li>
             <li>新的车票类型。</li>
           </ul>
         </li>
@@ -257,7 +265,7 @@
           2021-05-20(v2.3.9)
           <ul>
             <li>「卒業季」ですから、更新頻度はやや下がった。</li>
-            <li>新しい駅：<var>霸州</var>、<var>濱海港</var>、<var>昌平</var>、<var>長春</var>、<var>長春西</var>、<var>常州</var>、<var>徳惠</var>、<var>徳州</var>、<var>阜宁</var>、<var>阜宁南</var>、<var>海安</var>、<var>蓟州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>馬鞍山</var>、<var>蓬莱市</var>、<var>如東</var>、<var>射阳</var>、<var>四平</var>、<var>四平東</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var></li>
+            <li>新しい駅：<var>霸州</var>、<var>濱海港</var>、<var>昌平</var>、<var>長春</var>、<var>長春西</var>、<var>常州</var>、<var>徳惠</var>、<var>徳州</var>、<var>阜寧</var>、<var>阜寧南</var>、<var>海安</var>、<var>蓟州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>馬鞍山</var>、<var>蓬莱市</var>、<var>如東</var>、<var>射阳</var>、<var>四平</var>、<var>四平東</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var></li>
             <li>车站总数达到499个，机器数量1263台。</li>
           </ul>
         </li>
@@ -278,7 +286,7 @@
           2021-04-26(v2.3.6)
           <ul>
             <li>新しい駅：<var>大冶北</var>、<var>華山北</var></li>
-            <li>新しい駅組：<var>宝成、成渝線(線路)</var>、<var>昌福線(線路)</var>、<var>成渝高速線(線路)</var>、<var>抚顺線(線路)</var>、<var>广九線(線路)</var>、<var>广深港高速線(線路)</var>、<var>杭深線(線路)</var>、<var>遼宁沈阳(城市)</var>、<var>沈丹客専線(線路)</var></li>
+            <li>新しい駅組：<var>宝成、成渝線(線路)</var>、<var>昌福線(線路)</var>、<var>成渝高速線(線路)</var>、<var>抚顺線(線路)</var>、<var>广九線(線路)</var>、<var>广深港高速線(線路)</var>、<var>杭深線(線路)</var>、<var>遼寧沈阳(城市)</var>、<var>沈丹客専線(線路)</var></li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -288,7 +296,7 @@
               新しい駅：<var>河源</var>、<var>虎门</var>、<var>淮北</var>、<var>漳浦</var>
             </li>
             <li>
-              新しい駅組：<var>衢宁線(線路)</var>
+              新しい駅組：<var>衢寧線(線路)</var>
             </li>
             <li>
               车站联合体新增了一些额外数据。
@@ -373,7 +381,7 @@
           <ul>
             <li lang="en">Happy Chinese New Year / Lunar New Year!</li>
             <li>新しい駅：仙林、馬鞍山東。歴史記録を維持する為に新しい駅記録を作成：武夷山東</li>
-            <li>長楽、宁波及び福州南の案内を維持。</li>
+            <li>長楽、寧波及び福州南の案内を維持。</li>
           </ul>
         </li>
         <li class="list-group-item">
