--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -68,7 +68,7 @@
       <table class="table">
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
         <tr><td>1</td><td>长春</td><td>49</td><td>57</td></tr>
-        <tr><td>2</td><td>郑州东</td><td>47</td><td>60</td></tr>
+        <tr><td>2</td><td>郑州东</td><td>47</td><td>62</td></tr>
         <tr><td>3</td><td>郑州</td><td>43</td><td>55</td></tr>
         <tr><td>4</td><td>北京南</td><td>36</td><td>39</td></tr>
         <tr><td>5</td><td>杭州东</td><td>31</td><td>37</td></tr>
@@ -110,6 +110,14 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-01-30(v3.2.1)
+          <ul>
+            <li>微调部分翻译。</li>
+            <li>新增车站：<var>阜宁东</var>、<var>惠州北</var></li>
+            <li>新增车站联合体：<var>郑阜高速线(线路)</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-01-17(v3.2.0)
           <ul>
             <li>使用中文车站名作为日文模式下卡片的默认名称</li>
@@ -118,24 +126,6 @@
             <li>部分车站增加技术作业类型表示</li>
             <li>新增车站：<var>响水县</var>、<var>新沂南</var></li>
             <li>更改文件名版本号为<code>2022a</code></li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2021-12-31(v3.1.6)
-          <ul>
-            <li>为避免误解，本次更新中年份不再简写</li>
-            <li>部分车站联合体新增拼音与各语言翻译信息</li>
-            <li>新增车站：<var>洛阳龙门</var></li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          ……
-          2021-10-15(v3.1.0)
-          <ul>
-            <li>由于学业原因，部分数据未在本次更新中发布，它们将在下次更新中发布。</li>
-            <li>现在图片直接与每条记录对应了。</li>
-            <li>新增并修改部分自动转写与翻译。</li>
-            <li>新增车站：<var>大同南</var>、<var>代县</var>、<var>岱岳</var>、<var>古田</var>、<var>河口北</var>、<var>建水</var>、<var>锦州</var>、<var>涞源</var>、<var>灵丘</var>、<var>牛栏山</var>、<var>朔州</var>、<var>随州</var>、<var>叶柏寿</var>、<var>原平</var></li>
           </ul>
         </li>
         <li class="list-group-item">
