--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,6 +55,15 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-02-19(v3.3.0)
+          <ul>
+            <li>一部の翻訳を調整。</li>
+            <li>アピアランスを調整。</li>
+            <li>新しい駅：<var>重慶南</var>、<var>重慶西</var>、<var>丹江口</var>、<var>惠環</var>、<var>揚州</var></li>
+            <li>ファイル版本番号は <code>2022b</code> にする</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-01-30(v3.2.1)
           <ul>
             <li>一部の翻訳を微調整。</li>
@@ -323,7 +332,7 @@
           2021-03-29(v2.3.2)
           <ul>
             <li>
-              新しい駅：<var>吉首</var>、<var>昆山</var>、<var>良乡</var>、<var>麻城</var>、<var>麻城北</var>、<var>沙城</var>、<var>孝感東</var>、<var>延庆</var>
+              新しい駅：<var>吉首</var>、<var>昆山</var>、<var>良乡</var>、<var>麻城</var>、<var>麻城北</var>、<var>沙城</var>、<var>孝感東</var>、<var>延慶</var>
             </li>
             <li>
               新しい駅組：<var>京津城際線(線路)</var>
@@ -370,7 +379,7 @@
           <ul>
             <li>新しい駅：北京朝阳、長治東、丹阳、晋城、晋城東、汤逊湖、銅陵、西華、鄢陵。</li>
             <li>歴史記録を維持する為に新しい駅記録を作成：清華园</li>
-            <li>駅組案内を作成。新規作成した駅組は：北京(城市)、北京(其他車站)、重庆(城市)、福建福州(城市)、河南鄭州(城市)、河南鄭州(同城站)、湖北武漢(城市)、湖北武漢(同城站)、上海(城市)。</li>
+            <li>駅組案内を作成。新規作成した駅組は：北京(城市)、北京(其他車站)、重慶(城市)、福建福州(城市)、河南鄭州(城市)、河南鄭州(同城站)、湖北武漢(城市)、湖北武漢(同城站)、上海(城市)。</li>
             <li>駅リストを再排、辞書序に排列。</li>
             <li>「千機収録」、2021-02-14 に達成！</li>
             <li>「416 駅収録」達成！</li>
