--- a/rail/tktGener.html
+++ b/rail/tktGener.html
@@ -376,7 +376,7 @@
               </td>
             </tr>
             <tr>
-              <th>银通卡、e卡通换票</th>
+              <th>便捷乘车换票</th>
               <td>
                 <label class="form-check-label">
                   <input type="checkbox" class="form-check-input" id="sel_141">确定
@@ -398,6 +398,19 @@
               <td>
                 <label class="form-check-label">
                   <input type="checkbox" class="form-check-input" id="sel_152">具有该功能
+                </label>
+              </td>
+            </tr>
+            <tr>
+              <th>改签</th>
+              <td>
+                <label class="form-check-label">
+                  <input type="checkbox" class="form-check-input" id="sel_161">确定
+                </label>
+              </td>
+              <td>
+                <label class="form-check-label">
+                  <input type="checkbox" class="form-check-input" id="sel_162">具有该功能
                 </label>
               </td>
             </tr>
