--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
               <img  style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" />
               <img  style="height:22px!important;margin-left: 3px;vertical-align:text-bottom;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" />
             </a></p>
-            <p><a href="/rail/tktmach_latest.html">中国铁路售票机综合统计(Multilanguage)</a></p>
-            <p><a href="/rail/票机综合统计202005101.mdx">票机综合统计 Mdict 下载(Chinese only)</a></p>
+            <p><a href="/rail/tktmach_latest.html">运转大数据 (中国铁路售票机综合统计) (Multi-language)</a></p>
+            <p><a href="/rail/tktMach2022a2.mdx">运转大数据 Mdict 下载 (Chinese)</a> <a href="/rail/tktMach2022a2.ja.mdx">運転マスデータ (日本語)</a></p>
           </article>
         </div>
       </div>
