--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,15 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-02-19(v3.3.0)
+          <ul>
+            <li>移除部分装饰，增加、调整部分翻译。</li>
+            <li>调整局部布局。</li>
+            <li>新增车站：<var>重庆南</var>、<var>重庆西</var>、<var>丹江口</var>、<var>惠环</var>、<var>扬州</var></li>
+            <li>更改文件名版本号为<code>2022b</code></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-01-30(v3.2.1)
           <ul>
             <li>微调部分翻译。</li>
