--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -69,14 +69,14 @@
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
         <tr><td>1</td><td>长春</td><td>49</td><td>57</td></tr>
         <tr><td>2</td><td>郑州东</td><td>47</td><td>62</td></tr>
-        <tr><td>3</td><td>郑州</td><td>43</td><td>55</td></tr>
+        <tr><td>3</td><td>郑州</td><td>45 (↑)</td><td>57 (↑)</td></tr>
         <tr><td>4</td><td>北京南</td><td>36</td><td>39</td></tr>
         <tr><td>5</td><td>杭州东</td><td>31</td><td>37</td></tr>
         <tr><td>6</td><td>兰州</td><td>30</td><td>40</td></tr>
-        <tr><td>7</td><td>福州</td><td>27</td><td>33</td></tr>
-        <tr><td>8</td><td>兰州西</td><td>26</td><td>34</td></tr>
-        <tr><td>9</td><td>上海</td><td>23</td><td>24</td></tr>
-        <tr><td>10</td><td>天津</td><td>22</td><td>29</td></tr>
+        <tr><td>7 (↑)</td><td>南京南</td><td>28</td><td>29</td></tr>
+        <tr><td>8 (↓)</td><td>福州</td><td>27</td><td>34</td></tr>
+        <tr><td>9 (↓)</td><td>兰州西</td><td>26</td><td>34</td></tr>
+        <tr><td>10 (↓)</td><td>上海</td><td>23</td><td>24</td></tr>
       </table>
     </div>
     <div class="container">
@@ -110,15 +110,16 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
-          2022-01-30(v3.2.1)
+          2022-02-19(v3.3.0)
           <ul>
-            <li>微调部分翻译。</li>
-            <li>新增车站：<var>阜宁东</var>、<var>惠州北</var></li>
-            <li>新增车站联合体：<var>郑阜高速线(线路)</var></li>
+            <li>移除部分装饰，增加、调整部分翻译。</li>
+            <li>调整局部布局。</li>
+            <li>新增车站：<var>重庆南</var>、<var>重庆西</var>、<var>丹江口</var>、<var>惠环</var>、<var>扬州</var></li>
+            <li>更改文件名版本号为<code>2022b</code></li>
           </ul>
         </li>
         <li class="list-group-item">
-          2022-01-17(v3.2.0)
+          …… 2022-01-17(v3.2.0)
           <ul>
             <li>使用中文车站名作为日文模式下卡片的默认名称</li>
             <li>为避免误解，年份只在简介中简写</li>
@@ -129,8 +130,7 @@
           </ul>
         </li>
         <li class="list-group-item">
-          ……
-          2021-07-31(v3.0.0)
+          …… 2021-07-31(v3.0.0)
           <ul>
             <li>新版本正式发布</li>
             <li>测试日语翻译上线</li>
