--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,14 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-02-27(v3.3.1)
+          <ul>
+            <li>票纸名称统一化，新增冬奥纪念票纸类型。</li>
+            <li>修复了生成器的一些错误，新增了一些功能标注。</li>
+            <li>新增车站：<var>繁昌西</var>、<var>明港东</var>、<var>唐山</var>、<var>湾沚南</var>、<var>芜湖南</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-02-19(v3.3.0)
           <ul>
             <li>移除部分装饰，增加、调整部分翻译。</li>
