--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,6 +55,14 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-02-27(v3.3.1)
+          <ul>
+            <li>券紙名を調整、北京オリムピック限定券紙を追加。</li>
+            <li>バーグを修復。</li>
+            <li>新しい駅：<var>繁昌西</var>、<var>明港东</var>、<var>唐山</var>、<var>湾沚南</var>、<var>芜湖南</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-02-19(v3.3.0)
           <ul>
             <li>一部の翻訳を調整。</li>
