--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -40,8 +40,8 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2021d2.mdx"><i class="fas fa-download"></i>下载词典 - 2021年12月31日版本</a></p>
-    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
+    <p><a href="./tktMach2022a2.mdx"><i class="fas fa-download"></i>下载词典 - 2022年2月19日版本</a></p>
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。与作者联系以便获取以其他协议授权的数据。
   </div>
   <div class="container">
     项目网址：
@@ -54,10 +54,10 @@
     <p>售票机的窗口号可以从屏幕最底下获得。售票窗口的窗口号一般悬挂在窗口上，除非有特殊声明。</p>
   </div>
   <div class="container">
-    <h2>运转大数据 ｜ 关于我们</h2>
-    <h4 class="text-muted" lang="en">Yùnzhuǎn Dà-shùjù (Big Data for Train Travel in China, YZDSJ) | About us</h4>
-    <p><span>一个小小的个人网页，正在建设中……如有疑问，请联系管理员（前往<a href="#plq">评论区</a>）。</span><br>
-    <span class="text-muted" lang="en">A brunch of personal web pages, under construction... Any question please contact Kina or just <a href="#plq">comment</a> us.</span></p>
+    <h1>运转大数据 ｜ 关于我们</h1>
+    <h2 class="text-muted" lang="en">Yùnzhuǎn Dà-shùjù (Big Data for Train Travel in China, YZDSJ) | About us</h2>
+    <p><span>一个小小的个人网页，正在建设中。所有数据均为热心网友调查获得，且为保护隐私，日期做过技术处理。由于机器情况、实地情况的复杂性，对数据的准确性不作任何保证。使用数据时注意遵守法律法规以及授权协议。请注意阅读各网页的通知，所有首页的声明均视为已传达给您。如有疑问，请联系管理员（或前往<a href="#plq">评论区</a>）。</span><br>
+    <span class="text-muted" lang="en">A brunch of personal web pages, under construction. All data were granted by users and some sensitive information is mangled to protect privacy. Use this site with extra care and DO NOT rely on it when planning a travel and / or traveling. When English translation is not available, please refer to the Chinese version. Any question please contact Kina or just <a href="#plq">comment</a> us.</span></p>
     <!-- Person info - React -->
     <script src="./js/aboutPageData.min.js"></script>
     <div class="card" id="react_container_persons"></div>
@@ -69,18 +69,18 @@
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
         <tr><td>1</td><td>长春</td><td>49</td><td>57</td></tr>
         <tr><td>2</td><td>郑州东</td><td>47</td><td>62</td></tr>
-        <tr><td>3</td><td>郑州</td><td>45 (↑)</td><td>57 (↑)</td></tr>
+        <tr><td>3</td><td>郑州</td><td>45</td><td>57</td></tr>
         <tr><td>4</td><td>北京南</td><td>36</td><td>39</td></tr>
-        <tr><td>5</td><td>杭州东</td><td>31</td><td>37</td></tr>
-        <tr><td>6</td><td>兰州</td><td>30</td><td>40</td></tr>
-        <tr><td>7 (↑)</td><td>南京南</td><td>28</td><td>29</td></tr>
-        <tr><td>8 (↓)</td><td>福州</td><td>27</td><td>34</td></tr>
-        <tr><td>9 (↓)</td><td>兰州西</td><td>26</td><td>34</td></tr>
-        <tr><td>10 (↓)</td><td>上海</td><td>23</td><td>24</td></tr>
+        <tr><td>5 (↑)</td><td>南京南</td><td>35 (↑)</td><td>37 (↑)</td></tr>
+        <tr><td>6 (↓)</td><td>杭州东</td><td>31</td><td>37</td></tr>
+        <tr><td>7 (↓)</td><td>兰州</td><td>30</td><td>40</td></tr>
+        <tr><td>8</td><td>福州</td><td>27</td><td>34</td></tr>
+        <tr><td>9</td><td>兰州西</td><td>26</td><td>34</td></tr>
+        <tr><td>10</td><td>上海</td><td>23</td><td>24</td></tr>
       </table>
     </div>
     <div class="container">
-      <h4>票机评价标准：</h4>
+      <h3>票机评价标准：</h3>
       <ul class="list-group">
         <li class="list-group-item list-group-item-danger">0分/极差：刚出票即有瑕疵，半年左右即模糊不清，并有缺失、白条等。</li>
         <li class="list-group-item list-group-item-warning">1分/很差：一年左右即模糊不清，缺失、白条等。</li>
@@ -110,6 +110,14 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-02-27(v3.3.1)
+          <ul>
+            <li>票纸名称统一化，新增冬奥纪念票纸类型。</li>
+            <li>修复了生成器的一些错误，新增了一些功能标注。</li>
+            <li>新增车站：<var>繁昌西</var>、<var>明港东</var>、<var>唐山</var>、<var>湾沚南</var>、<var>芜湖南</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-02-19(v3.3.0)
           <ul>
             <li>移除部分装饰，增加、调整部分翻译。</li>
