--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,12 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-03-13(v3.3.2)
+          <ul>
+            <li>新增车站：<var>郏县</var>、<var>长葛</var>、<var>长葛北</var></li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-02-27(v3.3.1)
           <ul>
             <li>票纸名称统一化，新增冬奥纪念票纸类型。</li>
