--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -71,9 +71,9 @@
         <tr><td>2</td><td>郑州东</td><td>47</td><td>62</td></tr>
         <tr><td>3</td><td>郑州</td><td>45</td><td>57</td></tr>
         <tr><td>4</td><td>北京南</td><td>36</td><td>39</td></tr>
-        <tr><td>5 (↑)</td><td>南京南</td><td>35 (↑)</td><td>37 (↑)</td></tr>
-        <tr><td>6 (↓)</td><td>杭州东</td><td>31</td><td>37</td></tr>
-        <tr><td>7 (↓)</td><td>兰州</td><td>30</td><td>40</td></tr>
+        <tr><td>5</td><td>南京南</td><td>35</td><td>38 (↑)</td></tr>
+        <tr><td>6</td><td>杭州东</td><td>31</td><td>37</td></tr>
+        <tr><td>7</td><td>兰州</td><td>30</td><td>40</td></tr>
         <tr><td>8</td><td>福州</td><td>27</td><td>34</td></tr>
         <tr><td>9</td><td>兰州西</td><td>26</td><td>34</td></tr>
         <tr><td>10</td><td>上海</td><td>23</td><td>24</td></tr>
@@ -110,15 +110,13 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
-          2022-02-27(v3.3.1)
+          2022-03-13(v3.3.2)
           <ul>
-            <li>票纸名称统一化，新增冬奥纪念票纸类型。</li>
-            <li>修复了生成器的一些错误，新增了一些功能标注。</li>
-            <li>新增车站：<var>繁昌西</var>、<var>明港东</var>、<var>唐山</var>、<var>湾沚南</var>、<var>芜湖南</var></li>
+            <li>新增车站：<var>郏县</var>、<var>长葛</var>、<var>长葛北</var></li>
           </ul>
         </li>
         <li class="list-group-item">
-          2022-02-19(v3.3.0)
+          …… 2022-02-19(v3.3.0)
           <ul>
             <li>移除部分装饰，增加、调整部分翻译。</li>
             <li>调整局部布局。</li>
