--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,6 +55,13 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-05-22(v3.4.1)
+          <ul>
+            <li>新しい券面を紹介。</li>
+            <li>記録した駅599個、機器1600個達成。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-04-24(v3.4.0)
           <ul>
             <li>データを更新。一部内容を調整</li>
