--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,13 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-05-22(v3.4.1)
+          <ul>
+            <li>新增了关于新款票面的提示。</li>
+            <li>车站总数达到599个，机器数量达到1600台。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-04-24(v3.4.0)
           <ul>
             <li>常规更新。修复了部分错误的提示。</li>
