--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -40,7 +40,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2022b2.mdx"><i class="fas fa-download"></i>下载词典 - 2022年3月27日版本</a></p>
+    <p><a href="./tktMach2022c2.mdx"><i class="fas fa-download"></i>下载词典 - 2022年5月22日版本</a></p>
     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。与作者联系以便获取以其他协议授权的数据。
   </div>
   <div class="container">
@@ -76,7 +76,7 @@
         <tr><td>7</td><td>兰州</td><td>30</td><td>40</td></tr>
         <tr><td>8</td><td>福州</td><td>27</td><td>34</td></tr>
         <tr><td>9</td><td>兰州西</td><td>26</td><td>34</td></tr>
-        <tr><td>10</td><td>上海</td><td>23</td><td>24</td></tr>
+        <tr><td>10</td><td>南京</td><td>23</td><td>27</td></tr>
       </table>
     </div>
     <div class="container">
@@ -110,16 +110,17 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-05-22(v3.4.1)
+          <ul>
+            <li>新增了关于新款票面的提示。</li>
+            <li>车站总数达到599个，机器数量达到1600台。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-04-24(v3.4.0)
           <ul>
             <li>常规更新。修复了部分错误的提示。</li>
             <li>更改文件名版本号为<code>2022c</code></li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          2022-03-27(v3.3.3)
-          <ul>
-            <li>常规更新。</li>
           </ul>
         </li>
         <li class="list-group-item">
@@ -129,17 +130,6 @@
             <li>调整局部布局。</li>
             <li>新增车站：<var>重庆南</var>、<var>重庆西</var>、<var>丹江口</var>、<var>惠环</var>、<var>扬州</var></li>
             <li>更改文件名版本号为<code>2022b</code></li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          …… 2022-01-17(v3.2.0)
-          <ul>
-            <li>使用中文车站名作为日文模式下卡片的默认名称</li>
-            <li>为避免误解，年份只在简介中简写</li>
-            <li>因混淆概率较低，年份的日本语翻译中去除“公元”字样</li>
-            <li>部分车站增加技术作业类型表示</li>
-            <li>新增车站：<var>响水县</var>、<var>新沂南</var></li>
-            <li>更改文件名版本号为<code>2022a</code></li>
           </ul>
         </li>
         <li class="list-group-item">
