--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,6 +55,15 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-06-19(v3.4.2)
+          <ul>
+            <li>新しい駅：<var>滑浚</var>、<var>新乡南</var></li>
+            <li>一部駅の情報を調整</li>
+            <li>ファイル版本番号は <code>2022d</code> にする</li>
+            <li>記録した駅601個、機器1605個達成。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-05-22(v3.4.1)
           <ul>
             <li>新しい券面を紹介。</li>
