--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -68,14 +68,14 @@
       <table class="table">
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
         <tr><td>1</td><td>长春</td><td>49</td><td>57</td></tr>
-        <tr><td>2</td><td>郑州东</td><td>47</td><td>62</td></tr>
-        <tr><td>3</td><td>郑州</td><td>45</td><td>57</td></tr>
+        <tr><td>2</td><td>郑州东</td><td>47</td><td>63</td></tr>
+        <tr><td>3</td><td>郑州</td><td>46</td><td>58</td></tr>
         <tr><td>4</td><td>北京南</td><td>36</td><td>39</td></tr>
         <tr><td>5</td><td>南京南</td><td>35</td><td>38</td></tr>
         <tr><td>6</td><td>杭州东</td><td>31</td><td>37</td></tr>
-        <tr><td>7</td><td>兰州</td><td>30</td><td>40</td></tr>
-        <tr><td>8</td><td>福州</td><td>27</td><td>34</td></tr>
-        <tr><td>9</td><td>兰州西</td><td>26</td><td>34</td></tr>
+        <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
+        <tr><td>8</td><td>兰州西</td><td>27</td><td>35</td></tr>
+        <tr><td>9</td><td>福州</td><td>27</td><td>34</td></tr>
         <tr><td>10</td><td>南京</td><td>23</td><td>27</td></tr>
       </table>
     </div>
@@ -110,14 +110,16 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
-          2022-05-22(v3.4.1)
+          2022-06-19(v3.4.2)
           <ul>
-            <li>新增了关于新款票面的提示。</li>
-            <li>车站总数达到599个，机器数量达到1600台。</li>
+            <li>新增车站：<var>滑浚</var>、<var>新乡南</var></li>
+            <li>部分车站信息调整。</li>
+            <li>更改文件名版本号为<code>2022d</code></li>
+            <li>车站总数达到601个，机器数量达到1605台。</li>
           </ul>
         </li>
         <li class="list-group-item">
-          2022-04-24(v3.4.0)
+          …… 2022-04-24(v3.4.0)
           <ul>
             <li>常规更新。修复了部分错误的提示。</li>
             <li>更改文件名版本号为<code>2022c</code></li>
@@ -192,7 +194,7 @@
   <script>
       new Valine({el: '#vcomments',appId: 'VY3q0lDUnkBNoCLciW7W4tCC-gzGzoHsz',appKey: 'RUb9iXuGiAK80y4rc9J2zN65', visitor: true, enableQQ: true, requiredFields: ['nick']})
   </script>
-  <!--shinobi1--><script type="text/javascript" src="https://xa.shinobi.jp/ufo/190138801"></script><noscript><a href="https://xa.shinobi.jp/bin/gg?190138801" target="_blank"><img src="https://xa.shinobi.jp/bin/ll?190138801" border="0"></a><br><span style="font-size:9px"><img style="margin:0;vertical-align:text-bottom;" src="https://img.shinobi.jp/tadaima/fj.gif" width="19" height="11"> </span></noscript><!--shinobi2-->
+  <a href="https://xa.shinobi.jp/bin/gg?190138801" target="_blank"><img src="https://xa.shinobi.jp/bin/ll?190138801" border="0"></a><br><span style="font-size:9px"><img style="margin:0;vertical-align:text-bottom;" src="https://img.shinobi.jp/tadaima/fj.gif" width="19" height="11"> </span>
   <footer class="container">
     <small class="text-muted">文中各商标为对应公司的资产。</small>
   </footer>
