--- a/rail/tktGener.html
+++ b/rail/tktGener.html
@@ -196,7 +196,7 @@
           title="请输入车票票号后的提示。">
       </div>
       <div class="form-group">
-        <small class="text-muted">如有“武A”“上海自售”等并非车站名的特殊字样应该填写上框。据悉，原则上记账日期晚于 2021-04-03 之车票不再显示“**售”，而直接显示“**”（车站名等）。自北京时间 2021-05-03 00:00 始至 另有通知 止，除了新式票号后为“**”（出票车站名，如“北京西”）以外的车票应标注票号后注，如“福州售”。</small>
+        <small class="text-muted">如有“武A”“上海自售”等并非车站名的特殊字样应该填写上框。据悉，原则上 2022-04-20 以来打印之报销凭证不再在票号后提示售票站名。 自北京时间 2022-04-20 00:00 始至 另有通知 止，所有车票均应标注票号后注（如有），如“福州售”“北京西”“JM”。留空则自动提示为无附注。</small>
       </div>
       <div class="form-group">
         票机功能信息:
