--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -55,11 +55,19 @@
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-07-03(v3.4.3)
+          <ul>
+            <li>新しい駅：<var>奉节</var>、<var>焦作西</var>、<var>临河</var>、<var>宁陵県</var>、<var>濮阳東</var>、<var>神农架</var>、<var>巫山</var>、<var>浠水</var>、<var>云阳</var>、<var>郑州航空港</var>。</li>
+            <li>一部駅の情報を調整。</li>
+            <li>一部データの失効原因を明らかにした。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-06-19(v3.4.2)
           <ul>
-            <li>新しい駅：<var>滑浚</var>、<var>新乡南</var></li>
-            <li>一部駅の情報を調整</li>
-            <li>ファイル版本番号は <code>2022d</code> にする</li>
+            <li>新しい駅：<var>滑浚</var>、<var>新乡南</var>。</li>
+            <li>一部駅の情報を調整。</li>
+            <li>ファイル版本番号は <code>2022d</code> にする。</li>
             <li>記録した駅601個、機器1605個達成。</li>
           </ul>
         </li>
