--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,9 +56,17 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-07-03(v3.4.3)
+          <ul>
+            <li>新增车站：<var>奉节</var>、<var>焦作西</var>、<var>临河</var>、<var>宁陵县</var>、<var>濮阳东</var>、<var>神农架</var>、<var>巫山</var>、<var>浠水</var>、<var>云阳</var>、<var>郑州航空港</var>。</li>
+            <li>部分车站信息调整。</li>
+            <li>明确了部分数据的失效原因。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-06-19(v3.4.2)
           <ul>
-            <li>新增车站：<var>滑浚</var>、<var>新乡南</var></li>
+            <li>新增车站：<var>滑浚</var>、<var>新乡南</var>。</li>
             <li>部分车站信息调整。</li>
             <li>更改文件名版本号为<code>2022d</code></li>
             <li>车站总数达到601个，机器数量达到1605台。</li>
