--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -67,11 +67,11 @@
       <h3>趋势榜</h3><h4 class="text-muted" lang="en">Trend List</h4>
       <table class="table">
         <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-        <tr><td>1</td><td>长春</td><td>49</td><td>57</td></tr>
-        <tr><td>2</td><td>郑州东</td><td>47</td><td>63</td></tr>
-        <tr><td>3</td><td>郑州</td><td>46</td><td>58</td></tr>
-        <tr><td>4</td><td>北京南</td><td>36</td><td>39</td></tr>
-        <tr><td>5</td><td>南京南</td><td>35</td><td>38</td></tr>
+        <tr><td>1</td><td>长春</td><td>54</td><td>63</td></tr>
+        <tr><td>2</td><td>郑州东</td><td>47</td><td>65</td></tr>
+        <tr><td>3</td><td>郑州</td><td>46</td><td>59</td></tr>
+        <tr><td>4</td><td>南京南</td><td>40</td><td>43</td></tr>
+        <tr><td>5</td><td>北京南</td><td>38</td><td>42</td></tr>
         <tr><td>6</td><td>杭州东</td><td>31</td><td>37</td></tr>
         <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
         <tr><td>8</td><td>兰州西</td><td>27</td><td>35</td></tr>
@@ -110,12 +110,11 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
-          2022-06-19(v3.4.2)
+          2022-07-03(v3.4.3)
           <ul>
-            <li>新增车站：<var>滑浚</var>、<var>新乡南</var></li>
+            <li>新增车站：<var>奉节</var>、<var>焦作西</var>、<var>临河</var>、<var>宁陵县</var>、<var>濮阳东</var>、<var>神农架</var>、<var>巫山</var>、<var>浠水</var>、<var>云阳</var>、<var>郑州航空港</var>。</li>
             <li>部分车站信息调整。</li>
-            <li>更改文件名版本号为<code>2022d</code></li>
-            <li>车站总数达到601个，机器数量达到1605台。</li>
+            <li>明确了部分数据的失效原因。</li>
           </ul>
         </li>
         <li class="list-group-item">
