--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -54,6 +54,12 @@
       <h4 class="text-muted" lang="en">Update log</h4>
       <p>これは完全な変更履歴です。内容の増加・版式の調整等はリストされないかもしれないので、ご注意ください。</p>
       <ul class="list-group">
+        2022-07-31(v3.4.5)
+        <ul>
+          <li>製造会社の訳名を調整。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         <li class="list-group-item border border-primary">
           2022-07-03(v3.4.3)
           <ul>
