--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -56,6 +56,12 @@
       <p class="text-muted" lang="en">A detailed version of update log. Reminder: Minor changes (including, but not limited to, new content cards or minor page changes) may not be listed here.</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-07-31(v3.4.5)
+          <ul>
+            <li>完善厂商名称翻译。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-07-17(v3.4.4)
           <ul>
             <li>新增车站：<var>淮阳南</var>、<var>沈丘北</var>、<var>周口</var>、<var>周口东</var>。</li>
