--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -70,7 +70,7 @@
         <tr><td>1</td><td>长春</td><td>54</td><td>63</td></tr>
         <tr><td>2</td><td>郑州东</td><td>48</td><td>66</td></tr>
         <tr><td>3</td><td>郑州</td><td>46</td><td>59</td></tr>
-        <tr><td>4</td><td>南京南</td><td>41</td><td>44</td></tr>
+        <tr><td>4</td><td>南京南</td><td>45</td><td>52</td></tr>
         <tr><td>5</td><td>北京南</td><td>38</td><td>42</td></tr>
         <tr><td>6</td><td>杭州东</td><td>32</td><td>38</td></tr>
         <tr><td>7</td><td>兰州</td><td>30</td><td>41</td></tr>
@@ -110,6 +110,12 @@
       <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
       <ul class="list-group">
         <li class="list-group-item border border-primary">
+          2022-07-31(v3.4.5)
+          <ul>
+            <li>完善厂商名称翻译。</li>
+          </ul>
+        </li>
+        <li class="list-group-item">
           2022-07-17(v3.4.4)
           <ul>
             <li>新增车站：<var>淮阳南</var>、<var>沈丘北</var>、<var>周口</var>、<var>周口东</var>。</li>
